parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> piece
Rule 1     piece -> cuadruploPlay ACOUSTATIC PIECE ID OPENCORCH content CLOSECORCH
Rule 2     cuadruploPlay -> <empty>
Rule 3     content -> declaration content
Rule 4     content -> declaration
Rule 5     declaration -> NEW soundDeclaration
Rule 6     declaration -> NEW instrumentDeclaration
Rule 7     declaration -> NEW trackDeclaration
Rule 8     declaration -> assignment
Rule 9     declaration -> print
Rule 10    declaration -> arrayCreation
Rule 11    print -> PRINT OPENPAREN CLOSEPAREN SEMICOLON creaPrint1
Rule 12    print -> PRINT OPENPAREN printContent CLOSEPAREN SEMICOLON creaPrint2
Rule 13    creaPrint1 -> <empty>
Rule 14    creaPrint2 -> <empty>
Rule 15    printContent -> casterString STRINGLINE meteCte meteID quitaCte COMMA printContent
Rule 16    printContent -> casterString STRINGLINE meteCte meteID quitaCte
Rule 17    printContent -> idornum COMMA printContent
Rule 18    printContent -> idornum
Rule 19    printContent -> ID meteArr OPENBRACK fondoFalso exp2 creaVer CLOSEBRACK creaCuadsArr
Rule 20    soundAttribute -> intensityAttribute SEMICOLON soundAttribute
Rule 21    soundAttribute -> durationAttribute SEMICOLON soundAttribute
Rule 22    soundAttribute -> toneAttribute SEMICOLON soundAttribute
Rule 23    soundAttribute -> pitchAttribute SEMICOLON
Rule 24    soundDeclaration -> SOUND ID insertSonido meteSonido OPENCORCH soundAttribute CLOSECORCH
Rule 25    soundDeclaration -> SOUND ID insertSonido SEMICOLON
Rule 26    insertSonido -> <empty>
Rule 27    meteSonido -> <empty>
Rule 28    intensityAttribute -> INTENSITY COLON exp2
Rule 29    pitchAttribute -> PITCH COLON exp2
Rule 30    durationAttribute -> DURATION COLON exp2
Rule 31    toneAttribute -> TONE COLON exp2
Rule 32    instrumentDeclaration -> INSTRUMENT ID insertInstrument OPENCORCH soundsPart CLOSECORCH
Rule 33    instrumentDeclaration -> INSTRUMENT ID insertInstrument
Rule 34    insertInstrument -> <empty>
Rule 35    soundsPart -> SOUNDS OPENCORCH prendeSoundFlag soundInnerPart prendeSoundFlag CLOSECORCH
Rule 36    prendeSoundFlag -> <empty>
Rule 37    soundInnerPart -> ID meteInstr1 COMMA soundInnerPart
Rule 38    soundInnerPart -> NEW soundDeclaration meteInstr2 COMMA soundInnerPart
Rule 39    soundInnerPart -> dynamicSoundCreation COMMA soundInnerPart
Rule 40    soundInnerPart -> ID meteInstr1
Rule 41    soundInnerPart -> NEW soundDeclaration
Rule 42    soundInnerPart -> dynamicSoundCreation
Rule 43    meteInstr1 -> <empty>
Rule 44    meteInstr2 -> <empty>
Rule 45    dynamicSoundCreation -> CREATE ID _ X OPENCORCH dynamicHelper1 CLOSECORCH COLON exp2 COLON exp2
Rule 46    dynamicHelper1 -> NEW soundDeclaration
Rule 47    dynamicHelper1 -> ID
Rule 48    trackDeclaration -> INSTRUMENTS OPENCORCH trackDeclarationHelper CLOSECORCH playTrack mainMethod
Rule 49    trackDeclaration -> INSTRUMENTS OPENCORCH trackDeclarationHelper CLOSECORCH methodBlock playTrack mainMethod
Rule 50    mainMethod -> newMethodCreation FUNCTION VOID MAIN methodListAdd fillMain OPENPAREN methodDeclatationParameter CLOSEPAREN OPENCORCH method playStringPrescence CLOSECORCH
Rule 51    playStringPrescence -> PLAY turnFlagOn OPENPAREN CLOSEPAREN SEMICOLON
Rule 52    playStringPrescence -> <empty>
Rule 53    turnFlagOn -> <empty>
Rule 54    fillMain -> <empty>
Rule 55    methodBlock -> methodDeclaration methodBlock
Rule 56    methodBlock -> methodDeclaration
Rule 57    returnStatement -> RETURN idornum creaReturn SEMICOLON
Rule 58    returnStatement -> RETURN methodCallingParam creaReturn SEMICOLON
Rule 59    creaReturn -> <empty>
Rule 60    methodDeclaration -> newMethodCreation FUNCTION type ID methodListAdd OPENPAREN methodDeclatationParameter CLOSEPAREN addParams OPENCORCH method CLOSECORCH meterReturn
Rule 61    addParams -> <empty>
Rule 62    meterReturn -> <empty>
Rule 63    methodListAdd -> <empty>
Rule 64    methodDeclatationParameter -> methodPair COMMA methodDeclatationParameter
Rule 65    methodDeclatationParameter -> methodPair
Rule 66    methodDeclatationParameter -> <empty>
Rule 67    methodPair -> methodType ID meterVariable
Rule 68    methodType -> SOUND
Rule 69    methodType -> BOOLEAN
Rule 70    methodType -> INSTRUMENT
Rule 71    methodType -> TRACK
Rule 72    methodType -> PIECE
Rule 73    methodType -> INT
Rule 74    methodType -> FL
Rule 75    methodType -> STRING
Rule 76    newMethodCreation -> <empty>
Rule 77    trackDeclarationHelper -> ID COMMA trackDeclarationHelper
Rule 78    trackDeclarationHelper -> NEW instrumentDeclaration COMMA trackDeclarationHelper
Rule 79    trackDeclarationHelper -> ID
Rule 80    trackDeclarationHelper -> NEW instrumentDeclaration
Rule 81    playTrack -> PLAY OPENCORCH playTrackHelper CLOSECORCH
Rule 82    playTrackHelper -> timeSector playTrackHelper
Rule 83    playTrackHelper -> timeSector
Rule 84    playTrackHelper -> methodCalling playTrackHelper
Rule 85    playTrackHelper -> methodCalling
Rule 86    timeSector -> exp2 startNewSection COLON exp2 completeTimeSection OPENCORCH timeSectorHelper CLOSECORCH formSector
Rule 87    startNewSection -> <empty>
Rule 88    completeTimeSection -> <empty>
Rule 89    formSector -> <empty>
Rule 90    timeSectorHelper -> ID lookID SEMICOLON timeSectorHelper
Rule 91    timeSectorHelper -> ID lookID SEMICOLON
Rule 92    timeSectorHelper -> ID lookID COLON LOOPS activateLoop SEMICOLON timeSectorHelper
Rule 93    timeSectorHelper -> ID lookID COLON LOOPS activateLoop SEMICOLON
Rule 94    timeSectorHelper -> ID lookID COLON LOOPS activateLoop OPENCORCH timeSectorHelper2 CLOSECORCH SEMICOLON timeSectorHelper
Rule 95    timeSectorHelper -> ID lookID COLON LOOPS activateLoop OPENCORCH timeSectorHelper2 CLOSECORCH SEMICOLON
Rule 96    activateLoop -> <empty>
Rule 97    lookID -> <empty>
Rule 98    timeSectorHelper2 -> ID OFF COMMA timeSectorHelper2
Rule 99    timeSectorHelper2 -> ID OFF
Rule 100   methodCalling -> ID verificaMetodo OPENPAREN creaEra methodParameter CLOSEPAREN SEMICOLON creaSub
Rule 101   methodCalling -> ID verificaMetodo OPENPAREN verificaContParam CLOSEPAREN SEMICOLON creaSub
Rule 102   verificaMetodo -> <empty>
Rule 103   creaEra -> <empty>
Rule 104   creaSub -> <empty>
Rule 105   methodCallingParam -> ID verificaMetodo OPENPAREN creaEra methodParameter CLOSEPAREN creaSub
Rule 106   methodCallingParam -> ID verificaMetodo OPENPAREN verificaContParam CLOSEPAREN creaSub
Rule 107   methodParameter -> depthHelperMethod COMMA sumaContParam methodParameter
Rule 108   methodParameter -> depthHelperMethod verificaContParam
Rule 109   sumaContParam -> <empty>
Rule 110   verificaContParam -> <empty>
Rule 111   depthHelper -> idornum
Rule 112   depthHelper -> idornum COLON depthHelper
Rule 113   depthHelperMethod -> idornumParam meteParam
Rule 114   depthHelperMethod -> idornumParam COLON depthHelperMethod
Rule 115   meteParam -> <empty>
Rule 116   idornumParam -> ID meterVariable2 meteID
Rule 117   idornumParam -> casterInt INTEGER meteCte meteID quitaCte
Rule 118   idornumParam -> casterFloat FLOAT meteCte meteID quitaCte
Rule 119   idornumParam -> casterString STRINGLINE meteCte meteID quitaCte
Rule 120   idornumParam -> methodCallingParam
Rule 121   method -> sentence
Rule 122   method -> sentence method
Rule 123   sentence -> soundMod
Rule 124   sentence -> addSound
Rule 125   sentence -> toggleSound
Rule 126   sentence -> condition
Rule 127   sentence -> assignment
Rule 128   sentence -> arrayCreation
Rule 129   sentence -> cycle
Rule 130   sentence -> print
Rule 131   sentence -> methodCalling
Rule 132   sentence -> returnStatement
Rule 133   soundMod -> depthHelper propertyAssignation SEMICOLON
Rule 134   propertyAssignation -> soundProperty COLON exp2
Rule 135   soundProperty -> INTENSITY
Rule 136   soundProperty -> PITCH
Rule 137   soundProperty -> TONE
Rule 138   soundProperty -> DURATION
Rule 139   addSound -> ADD ID COLON ID switch SEMICOLON
Rule 140   addSound -> ADD ID COLON NEW soundDeclaration SEMICOLON
Rule 141   switch -> ON
Rule 142   switch -> OFF
Rule 143   arrayCreation -> type ID OPENBRACK num CLOSEBRACK SEMICOLON
Rule 144   type -> SOUND
Rule 145   type -> INSTRUMENT
Rule 146   type -> BOOLEAN
Rule 147   type -> TRACK
Rule 148   type -> PIECE
Rule 149   type -> INT
Rule 150   type -> FL
Rule 151   type -> VOID
Rule 152   type -> STRING
Rule 153   assignment -> simpleAssignment SEMICOLON
Rule 154   assignment -> ID meteArr OPENBRACK fondoFalso exp2 creaVer CLOSEBRACK creaCuadsArr EQUALS meteIg exp2 verificaIg SEMICOLON
Rule 155   meteArr -> <empty>
Rule 156   fondoFalso -> <empty>
Rule 157   creaVer -> <empty>
Rule 158   creaCuadsArr -> <empty>
Rule 159   simpleAssignment -> type ID meterVariable meteID EQUALS meteIg typeAssigmentVerification
Rule 160   simpleAssignment -> ID meterVariable2 meteID EQUALS meteIg typeAssigmentVerification
Rule 161   typeAssigmentVerification -> booleanExp verificaIg
Rule 162   typeAssigmentVerification -> casterString STRINGLINE meteCte meteID quitaCte verificaIg
Rule 163   typeAssigmentVerification -> exp2 verificaIg
Rule 164   typeAssigmentVerification -> methodCallingParam verificaIg
Rule 165   typeAssigmentVerification -> ID meteArr OPENBRACK fondoFalso exp2 creaVer CLOSEBRACK creaCuadsArr verificaIg
Rule 166   quitaCte -> <empty>
Rule 167   meterVariable -> <empty>
Rule 168   exp2 -> t2 verificaSumRest
Rule 169   exp2 -> t2 verificaSumRest PLUS metePlus exp2
Rule 170   exp2 -> t2 verificaSumRest MINUS meteMinus exp2
Rule 171   t2 -> idornum verificaMultDiv
Rule 172   t2 -> idornum verificaMultDiv MULT meteMult t2
Rule 173   t2 -> idornum verificaMultDiv DIV meteDiv t2
Rule 174   t2 -> idornum verificaMultDiv REM meteRem t2
Rule 175   t2 -> OPENPAREN exp2 CLOSEPAREN
Rule 176   t2 -> OPENPAREN exp2 CLOSEPAREN MULT meteMult t2
Rule 177   t2 -> OPENPAREN exp2 CLOSEPAREN DIV meteDiv t2
Rule 178   t2 -> OPENPAREN exp2 CLOSEPAREN REM meteRem t2
Rule 179   num -> casterInt INTEGER meteCte meteID
Rule 180   num -> casterFloat FLOAT meteCte meteID
Rule 181   casterInt -> <empty>
Rule 182   casterString -> <empty>
Rule 183   casterFloat -> <empty>
Rule 184   meteCte -> <empty>
Rule 185   cycle -> while
Rule 186   cycle -> doWhile
Rule 187   cycle -> for
Rule 188   while -> WHILE meterPSalto OPENPAREN booleanExp verificaOr CLOSEPAREN OPENCORCH verificaCiclo method CLOSECORCH sacaWhile
Rule 189   doWhile -> DO meterPSalto OPENCORCH method CLOSECORCH WHILE OPENPAREN booleanExp CLOSEPAREN SEMICOLON verificaCiclo2
Rule 190   for -> FOR OPENPAREN simpleAssignment SEMICOLON booleanExp SEMICOLON simpleAssignment CLOSEPAREN OPENCORCH method CLOSECORCH
Rule 191   booleanExp -> TRUE meteCteBool meteID
Rule 192   booleanExp -> FALSE meteCteBool meteID
Rule 193   booleanExp -> exp2 GT meteGT exp2 verificaBool
Rule 194   booleanExp -> exp2 LT meteLT exp2 verificaBool
Rule 195   booleanExp -> exp2 GE meteGE exp2 verificaBool
Rule 196   booleanExp -> exp2 LE meteLE exp2 verificaBool
Rule 197   booleanExp -> exp2 EE meteEE exp2 verificaBool
Rule 198   booleanExp -> exp2 NE meteNE exp2 verificaBool
Rule 199   booleanExp -> exp2 GT meteGT exp2 verificaBool booleanComparison booleanExp verificaAnd
Rule 200   booleanExp -> exp2 LT meteLT exp2 verificaBool booleanComparison booleanExp verificaAnd
Rule 201   booleanExp -> exp2 GE meteGE exp2 verificaBool booleanComparison booleanExp verificaAnd
Rule 202   booleanExp -> exp2 LE meteLE exp2 verificaBool booleanComparison booleanExp verificaAnd
Rule 203   booleanExp -> exp2 EE meteEE exp2 verificaBool booleanComparison booleanExp verificaAnd
Rule 204   booleanExp -> exp2 NE meteNE exp2 verificaBool booleanComparison booleanExp verificaAnd
Rule 205   meteCteBool -> <empty>
Rule 206   booleanComparison -> AND meteAnd
Rule 207   booleanComparison -> OR meteOr
Rule 208   booleanComparison -> NOT meteNE
Rule 209   condition -> IF OPENPAREN booleanExp CLOSEPAREN OPENCORCH verificaCiclo method CLOSECORCH elseBlock
Rule 210   elseBlock -> ELSE sacaPSaltos2 OPENCORCH method CLOSECORCH sacaPSaltos
Rule 211   elseBlock -> sacaPSaltos
Rule 212   toggleSound -> depthHelper switch SEMICOLON
Rule 213   idornum -> ID lastVar meteID
Rule 214   idornum -> num lastNum
Rule 215   lastVar -> <empty>
Rule 216   lastNum -> <empty>
Rule 217   meteGT -> <empty>
Rule 218   meteLT -> <empty>
Rule 219   meteGE -> <empty>
Rule 220   meteLE -> <empty>
Rule 221   meteEE -> <empty>
Rule 222   meteNE -> <empty>
Rule 223   meteAnd -> <empty>
Rule 224   meteOr -> <empty>
Rule 225   meteMult -> <empty>
Rule 226   meteDiv -> <empty>
Rule 227   meteRem -> <empty>
Rule 228   metePlus -> <empty>
Rule 229   meteMinus -> <empty>
Rule 230   meteIg -> <empty>
Rule 231   meteID -> <empty>
Rule 232   verificaIg -> <empty>
Rule 233   verificaMultDiv -> <empty>
Rule 234   verificaSumRest -> <empty>
Rule 235   verificaBool -> <empty>
Rule 236   verificaAnd -> <empty>
Rule 237   verificaOr -> <empty>
Rule 238   verificaCiclo -> <empty>
Rule 239   verificaCiclo2 -> <empty>
Rule 240   sacaPSaltos -> <empty>
Rule 241   sacaPSaltos2 -> <empty>
Rule 242   meterPSalto -> <empty>
Rule 243   sacaWhile -> <empty>
Rule 244   meterVariable2 -> <empty>

Terminals, with rules where they appear

ACOUSTATIC           : 1
ADD                  : 139 140
AND                  : 206
BOOLEAN              : 69 146
CLOSEBRACK           : 19 143 154 165
CLOSECORCH           : 1 24 32 35 45 48 49 50 60 81 86 94 95 188 189 190 209 210
CLOSEPAREN           : 11 12 50 51 60 100 101 105 106 175 176 177 178 188 189 190 209
COLON                : 28 29 30 31 45 45 86 92 93 94 95 112 114 134 139 140
COMMA                : 15 17 37 38 39 64 77 78 98 107
CREATE               : 45
DIV                  : 173 177
DO                   : 189
DURATION             : 30 138
EE                   : 197 203
ELSE                 : 210
EQUALS               : 154 159 160
FALSE                : 192
FL                   : 74 150
FLOAT                : 118 180
FOR                  : 190
FUNCTION             : 50 60
GE                   : 195 201
GT                   : 193 199
ID                   : 1 19 24 25 32 33 37 40 45 47 60 67 77 79 90 91 92 93 94 95 98 99 100 101 105 106 116 139 139 140 143 154 159 160 165 213
IF                   : 209
INSTRUMENT           : 32 33 70 145
INSTRUMENTS          : 48 49
INT                  : 73 149
INTEGER              : 117 179
INTENSITY            : 28 135
LE                   : 196 202
LOOPS                : 92 93 94 95
LT                   : 194 200
MAIN                 : 50
MINUS                : 170
MULT                 : 172 176
NE                   : 198 204
NEW                  : 5 6 7 38 41 46 78 80 140
NOT                  : 208
OFF                  : 98 99 142
ON                   : 141
OPENBRACK            : 19 143 154 165
OPENCORCH            : 1 24 32 35 45 48 49 50 60 81 86 94 95 188 189 190 209 210
OPENPAREN            : 11 12 50 51 60 100 101 105 106 175 176 177 178 188 189 190 209
OR                   : 207
PIECE                : 1 72 148
PITCH                : 29 136
PLAY                 : 51 81
PLUS                 : 169
PRINT                : 11 12
REM                  : 174 178
RETURN               : 57 58
SEMICOLON            : 11 12 20 21 22 23 25 51 57 58 90 91 92 93 94 95 100 101 133 139 140 143 153 154 189 190 190 212
SOUND                : 24 25 68 144
SOUNDS               : 35
STRING               : 75 152
STRINGLINE           : 15 16 119 162
TONE                 : 31 137
TRACK                : 71 147
TRUE                 : 191
VOID                 : 50 151
WHILE                : 188 189
X                    : 45
_                    : 45
error                : 

Nonterminals, with rules where they appear

activateLoop         : 92 93 94 95
addParams            : 60
addSound             : 124
arrayCreation        : 10 128
assignment           : 8 127
booleanComparison    : 199 200 201 202 203 204
booleanExp           : 161 188 189 190 199 200 201 202 203 204 209
casterFloat          : 118 180
casterInt            : 117 179
casterString         : 15 16 119 162
completeTimeSection  : 86
condition            : 126
content              : 1 3
creaCuadsArr         : 19 154 165
creaEra              : 100 105
creaPrint1           : 11
creaPrint2           : 12
creaReturn           : 57 58
creaSub              : 100 101 105 106
creaVer              : 19 154 165
cuadruploPlay        : 1
cycle                : 129
declaration          : 3 4
depthHelper          : 112 133 212
depthHelperMethod    : 107 108 114
doWhile              : 186
durationAttribute    : 21
dynamicHelper1       : 45
dynamicSoundCreation : 39 42
elseBlock            : 209
exp2                 : 19 28 29 30 31 45 45 86 86 134 154 154 163 165 169 170 175 176 177 178 193 193 194 194 195 195 196 196 197 197 198 198 199 199 200 200 201 201 202 202 203 203 204 204
fillMain             : 50
fondoFalso           : 19 154 165
for                  : 187
formSector           : 86
idornum              : 17 18 57 111 112 171 172 173 174
idornumParam         : 113 114
insertInstrument     : 32 33
insertSonido         : 24 25
instrumentDeclaration : 6 78 80
intensityAttribute   : 20
lastNum              : 214
lastVar              : 213
lookID               : 90 91 92 93 94 95
mainMethod           : 48 49
meteAnd              : 206
meteArr              : 19 154 165
meteCte              : 15 16 117 118 119 162 179 180
meteCteBool          : 191 192
meteDiv              : 173 177
meteEE               : 197 203
meteGE               : 195 201
meteGT               : 193 199
meteID               : 15 16 116 117 118 119 159 160 162 179 180 191 192 213
meteIg               : 154 159 160
meteInstr1           : 37 40
meteInstr2           : 38
meteLE               : 196 202
meteLT               : 194 200
meteMinus            : 170
meteMult             : 172 176
meteNE               : 198 204 208
meteOr               : 207
meteParam            : 113
metePlus             : 169
meteRem              : 174 178
meteSonido           : 24
meterPSalto          : 188 189
meterReturn          : 60
meterVariable        : 67 159
meterVariable2       : 116 160
method               : 50 60 122 188 189 190 209 210
methodBlock          : 49 55
methodCalling        : 84 85 131
methodCallingParam   : 58 120 164
methodDeclaration    : 55 56
methodDeclatationParameter : 50 60 64
methodListAdd        : 50 60
methodPair           : 64 65
methodParameter      : 100 105 107
methodType           : 67
newMethodCreation    : 50 60
num                  : 143 214
piece                : 0
pitchAttribute       : 23
playStringPrescence  : 50
playTrack            : 48 49
playTrackHelper      : 81 82 84
prendeSoundFlag      : 35 35
print                : 9 130
printContent         : 12 15 17
propertyAssignation  : 133
quitaCte             : 15 16 117 118 119 162
returnStatement      : 132
sacaPSaltos          : 210 211
sacaPSaltos2         : 210
sacaWhile            : 188
sentence             : 121 122
simpleAssignment     : 153 190 190
soundAttribute       : 20 21 22 24
soundDeclaration     : 5 38 41 46 140
soundInnerPart       : 35 37 38 39
soundMod             : 123
soundProperty        : 134
soundsPart           : 32
startNewSection      : 86
sumaContParam        : 107
switch               : 139 212
t2                   : 168 169 170 172 173 174 176 177 178
timeSector           : 82 83
timeSectorHelper     : 86 90 92 94
timeSectorHelper2    : 94 95 98
toggleSound          : 125
toneAttribute        : 22
trackDeclaration     : 7
trackDeclarationHelper : 48 49 77 78
turnFlagOn           : 51
type                 : 60 143 159
typeAssigmentVerification : 159 160
verificaAnd          : 199 200 201 202 203 204
verificaBool         : 193 194 195 196 197 198 199 200 201 202 203 204
verificaCiclo        : 188 209
verificaCiclo2       : 189
verificaContParam    : 101 106 108
verificaIg           : 154 161 162 163 164 165
verificaMetodo       : 100 101 105 106
verificaMultDiv      : 171 172 173 174
verificaOr           : 188
verificaSumRest      : 168 169 170
while                : 185

Parsing method: LALR

state 0

    (0) S' -> . piece
    (1) piece -> . cuadruploPlay ACOUSTATIC PIECE ID OPENCORCH content CLOSECORCH
    (2) cuadruploPlay -> .

    ACOUSTATIC      reduce using rule 2 (cuadruploPlay -> .)

    piece                          shift and go to state 1
    cuadruploPlay                  shift and go to state 2

state 1

    (0) S' -> piece .



state 2

    (1) piece -> cuadruploPlay . ACOUSTATIC PIECE ID OPENCORCH content CLOSECORCH

    ACOUSTATIC      shift and go to state 3


state 3

    (1) piece -> cuadruploPlay ACOUSTATIC . PIECE ID OPENCORCH content CLOSECORCH

    PIECE           shift and go to state 4


state 4

    (1) piece -> cuadruploPlay ACOUSTATIC PIECE . ID OPENCORCH content CLOSECORCH

    ID              shift and go to state 5


state 5

    (1) piece -> cuadruploPlay ACOUSTATIC PIECE ID . OPENCORCH content CLOSECORCH

    OPENCORCH       shift and go to state 6


state 6

    (1) piece -> cuadruploPlay ACOUSTATIC PIECE ID OPENCORCH . content CLOSECORCH
    (3) content -> . declaration content
    (4) content -> . declaration
    (5) declaration -> . NEW soundDeclaration
    (6) declaration -> . NEW instrumentDeclaration
    (7) declaration -> . NEW trackDeclaration
    (8) declaration -> . assignment
    (9) declaration -> . print
    (10) declaration -> . arrayCreation
    (153) assignment -> . simpleAssignment SEMICOLON
    (154) assignment -> . ID meteArr OPENBRACK fondoFalso exp2 creaVer CLOSEBRACK creaCuadsArr EQUALS meteIg exp2 verificaIg SEMICOLON
    (11) print -> . PRINT OPENPAREN CLOSEPAREN SEMICOLON creaPrint1
    (12) print -> . PRINT OPENPAREN printContent CLOSEPAREN SEMICOLON creaPrint2
    (143) arrayCreation -> . type ID OPENBRACK num CLOSEBRACK SEMICOLON
    (159) simpleAssignment -> . type ID meterVariable meteID EQUALS meteIg typeAssigmentVerification
    (160) simpleAssignment -> . ID meterVariable2 meteID EQUALS meteIg typeAssigmentVerification
    (144) type -> . SOUND
    (145) type -> . INSTRUMENT
    (146) type -> . BOOLEAN
    (147) type -> . TRACK
    (148) type -> . PIECE
    (149) type -> . INT
    (150) type -> . FL
    (151) type -> . VOID
    (152) type -> . STRING

    NEW             shift and go to state 9
    ID              shift and go to state 19
    PRINT           shift and go to state 8
    SOUND           shift and go to state 7
    INSTRUMENT      shift and go to state 11
    BOOLEAN         shift and go to state 22
    TRACK           shift and go to state 20
    PIECE           shift and go to state 18
    INT             shift and go to state 25
    FL              shift and go to state 10
    VOID            shift and go to state 24
    STRING          shift and go to state 14

    content                        shift and go to state 12
    print                          shift and go to state 13
    type                           shift and go to state 21
    simpleAssignment               shift and go to state 15
    assignment                     shift and go to state 16
    declaration                    shift and go to state 17
    arrayCreation                  shift and go to state 23

state 7

    (144) type -> SOUND .

    ID              reduce using rule 144 (type -> SOUND .)


state 8

    (11) print -> PRINT . OPENPAREN CLOSEPAREN SEMICOLON creaPrint1
    (12) print -> PRINT . OPENPAREN printContent CLOSEPAREN SEMICOLON creaPrint2

    OPENPAREN       shift and go to state 26


state 9

    (5) declaration -> NEW . soundDeclaration
    (6) declaration -> NEW . instrumentDeclaration
    (7) declaration -> NEW . trackDeclaration
    (24) soundDeclaration -> . SOUND ID insertSonido meteSonido OPENCORCH soundAttribute CLOSECORCH
    (25) soundDeclaration -> . SOUND ID insertSonido SEMICOLON
    (32) instrumentDeclaration -> . INSTRUMENT ID insertInstrument OPENCORCH soundsPart CLOSECORCH
    (33) instrumentDeclaration -> . INSTRUMENT ID insertInstrument
    (48) trackDeclaration -> . INSTRUMENTS OPENCORCH trackDeclarationHelper CLOSECORCH playTrack mainMethod
    (49) trackDeclaration -> . INSTRUMENTS OPENCORCH trackDeclarationHelper CLOSECORCH methodBlock playTrack mainMethod

    SOUND           shift and go to state 27
    INSTRUMENT      shift and go to state 30
    INSTRUMENTS     shift and go to state 28

    trackDeclaration               shift and go to state 29
    soundDeclaration               shift and go to state 31
    instrumentDeclaration          shift and go to state 32

state 10

    (150) type -> FL .

    ID              reduce using rule 150 (type -> FL .)


state 11

    (145) type -> INSTRUMENT .

    ID              reduce using rule 145 (type -> INSTRUMENT .)


state 12

    (1) piece -> cuadruploPlay ACOUSTATIC PIECE ID OPENCORCH content . CLOSECORCH

    CLOSECORCH      shift and go to state 33


state 13

    (9) declaration -> print .

    NEW             reduce using rule 9 (declaration -> print .)
    ID              reduce using rule 9 (declaration -> print .)
    PRINT           reduce using rule 9 (declaration -> print .)
    SOUND           reduce using rule 9 (declaration -> print .)
    INSTRUMENT      reduce using rule 9 (declaration -> print .)
    BOOLEAN         reduce using rule 9 (declaration -> print .)
    TRACK           reduce using rule 9 (declaration -> print .)
    PIECE           reduce using rule 9 (declaration -> print .)
    INT             reduce using rule 9 (declaration -> print .)
    FL              reduce using rule 9 (declaration -> print .)
    VOID            reduce using rule 9 (declaration -> print .)
    STRING          reduce using rule 9 (declaration -> print .)
    CLOSECORCH      reduce using rule 9 (declaration -> print .)


state 14

    (152) type -> STRING .

    ID              reduce using rule 152 (type -> STRING .)


state 15

    (153) assignment -> simpleAssignment . SEMICOLON

    SEMICOLON       shift and go to state 34


state 16

    (8) declaration -> assignment .

    NEW             reduce using rule 8 (declaration -> assignment .)
    ID              reduce using rule 8 (declaration -> assignment .)
    PRINT           reduce using rule 8 (declaration -> assignment .)
    SOUND           reduce using rule 8 (declaration -> assignment .)
    INSTRUMENT      reduce using rule 8 (declaration -> assignment .)
    BOOLEAN         reduce using rule 8 (declaration -> assignment .)
    TRACK           reduce using rule 8 (declaration -> assignment .)
    PIECE           reduce using rule 8 (declaration -> assignment .)
    INT             reduce using rule 8 (declaration -> assignment .)
    FL              reduce using rule 8 (declaration -> assignment .)
    VOID            reduce using rule 8 (declaration -> assignment .)
    STRING          reduce using rule 8 (declaration -> assignment .)
    CLOSECORCH      reduce using rule 8 (declaration -> assignment .)


state 17

    (3) content -> declaration . content
    (4) content -> declaration .
    (3) content -> . declaration content
    (4) content -> . declaration
    (5) declaration -> . NEW soundDeclaration
    (6) declaration -> . NEW instrumentDeclaration
    (7) declaration -> . NEW trackDeclaration
    (8) declaration -> . assignment
    (9) declaration -> . print
    (10) declaration -> . arrayCreation
    (153) assignment -> . simpleAssignment SEMICOLON
    (154) assignment -> . ID meteArr OPENBRACK fondoFalso exp2 creaVer CLOSEBRACK creaCuadsArr EQUALS meteIg exp2 verificaIg SEMICOLON
    (11) print -> . PRINT OPENPAREN CLOSEPAREN SEMICOLON creaPrint1
    (12) print -> . PRINT OPENPAREN printContent CLOSEPAREN SEMICOLON creaPrint2
    (143) arrayCreation -> . type ID OPENBRACK num CLOSEBRACK SEMICOLON
    (159) simpleAssignment -> . type ID meterVariable meteID EQUALS meteIg typeAssigmentVerification
    (160) simpleAssignment -> . ID meterVariable2 meteID EQUALS meteIg typeAssigmentVerification
    (144) type -> . SOUND
    (145) type -> . INSTRUMENT
    (146) type -> . BOOLEAN
    (147) type -> . TRACK
    (148) type -> . PIECE
    (149) type -> . INT
    (150) type -> . FL
    (151) type -> . VOID
    (152) type -> . STRING

    CLOSECORCH      reduce using rule 4 (content -> declaration .)
    NEW             shift and go to state 9
    ID              shift and go to state 19
    PRINT           shift and go to state 8
    SOUND           shift and go to state 7
    INSTRUMENT      shift and go to state 11
    BOOLEAN         shift and go to state 22
    TRACK           shift and go to state 20
    PIECE           shift and go to state 18
    INT             shift and go to state 25
    FL              shift and go to state 10
    VOID            shift and go to state 24
    STRING          shift and go to state 14

    content                        shift and go to state 35
    print                          shift and go to state 13
    type                           shift and go to state 21
    simpleAssignment               shift and go to state 15
    assignment                     shift and go to state 16
    declaration                    shift and go to state 17
    arrayCreation                  shift and go to state 23

state 18

    (148) type -> PIECE .

    ID              reduce using rule 148 (type -> PIECE .)


state 19

    (154) assignment -> ID . meteArr OPENBRACK fondoFalso exp2 creaVer CLOSEBRACK creaCuadsArr EQUALS meteIg exp2 verificaIg SEMICOLON
    (160) simpleAssignment -> ID . meterVariable2 meteID EQUALS meteIg typeAssigmentVerification
    (155) meteArr -> .
    (244) meterVariable2 -> .

    OPENBRACK       reduce using rule 155 (meteArr -> .)
    EQUALS          reduce using rule 244 (meterVariable2 -> .)

    meterVariable2                 shift and go to state 36
    meteArr                        shift and go to state 37

state 20

    (147) type -> TRACK .

    ID              reduce using rule 147 (type -> TRACK .)


state 21

    (143) arrayCreation -> type . ID OPENBRACK num CLOSEBRACK SEMICOLON
    (159) simpleAssignment -> type . ID meterVariable meteID EQUALS meteIg typeAssigmentVerification

    ID              shift and go to state 38


state 22

    (146) type -> BOOLEAN .

    ID              reduce using rule 146 (type -> BOOLEAN .)


state 23

    (10) declaration -> arrayCreation .

    NEW             reduce using rule 10 (declaration -> arrayCreation .)
    ID              reduce using rule 10 (declaration -> arrayCreation .)
    PRINT           reduce using rule 10 (declaration -> arrayCreation .)
    SOUND           reduce using rule 10 (declaration -> arrayCreation .)
    INSTRUMENT      reduce using rule 10 (declaration -> arrayCreation .)
    BOOLEAN         reduce using rule 10 (declaration -> arrayCreation .)
    TRACK           reduce using rule 10 (declaration -> arrayCreation .)
    PIECE           reduce using rule 10 (declaration -> arrayCreation .)
    INT             reduce using rule 10 (declaration -> arrayCreation .)
    FL              reduce using rule 10 (declaration -> arrayCreation .)
    VOID            reduce using rule 10 (declaration -> arrayCreation .)
    STRING          reduce using rule 10 (declaration -> arrayCreation .)
    CLOSECORCH      reduce using rule 10 (declaration -> arrayCreation .)


state 24

    (151) type -> VOID .

    ID              reduce using rule 151 (type -> VOID .)


state 25

    (149) type -> INT .

    ID              reduce using rule 149 (type -> INT .)


